@@ -1,7 +1,8 @@
 v0.8.2
 
 * [BGBUILD-174] Move plugins to boxgrinder-build gem
-* [BGBUILD-169] README to indicate supported operating systems / requirements
+* [BGBUILD-169] S3 plugin temporary work-around for EL5
+* [BGBUILD-103] README to indicate supported operating systems / requirements
 * [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
 
 v0.8.1
